<resources>
    <string name="app_name">skillbit</string>
    <string name="let_start">Let\'s Start</string>
    <string name="already_have">Have Account</string>
    <string name="name">Name</string>
    <string name="signUp">SIGN UP</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="back">BACK</string>
    <string name="signIn">SIGN IN</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="onboardingWelcome">Welcome To Onboarding Process</string>
    <string name="onboardMessage">Please enter the EmployeId mention in the Email</string>
    <string name="employeeId">Employee Id</string>
    <string name="search">Search</string>
    <string name="employeeDetail">Employee Detail</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="designation">Designation</string>
    <string name="checkDetail">All detail are correct</string>
    <string name="update">UPDATE</string>
    <string name="joinTeamRequest">Join Team Request</string>
    <string name="python">Python team</string>
    <string name="django">Django Team</string>
    <string name="dataScience">Data Science Team</string>
    <string name="machineLearning">Machine Learning</string>
    <string name="pythonText">Lorem ispom dolor sit <br /> amet,conscetetur</string>
    <string name="djangoText">Present id Sollicitudin<br />diam,mattis dictum enim</string>
    <string name="dataScienceText">Curabitaur biendum<br /> vehicula nisi at sagittis</string>
    <string name="machineLearningText">Proin laoreet consequat<br />turpis,in ornare lacus</string>
    <string name="numberOne">01</string>
    <string name="numberTwo">02</string>
    <string name="numberThree">03</string>
    <string name="numberFour">04</string>
    <string name="dashBoardMessage">Your Request<br/> Has Been<br/> Processes</string>
    <string name="gotoDashBoard">GO TO DASHBOARD</string>
</resources>