<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employeeDetail"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="60dp">
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avenger"/>
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/profileEmpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/employeeId"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/profileDesignation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/designation"
        android:textStyle="bold"
        android:textColor="@color/black" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:padding="20dp">
    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/profilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phone"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/profileCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/city"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
   </LinearLayout>

    </androidx.cardview.widget.CardView>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:padding="10dp"
        android:text="@string/checkDetail"
        android:textColor="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/profilebuttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginStart="40dp"
            android:padding="20dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/butttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:padding="20dp"
            android:text="@string/update" />
    </LinearLayout>
</LinearLayout>