<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnboardingActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="120dp"
    android:text="@string/onboardingWelcome"
    android:autoSizeMaxTextSize="25sp"
    android:autoSizeMinTextSize="10sp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_gravity="center"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="20dp">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/onboardMessage"
          android:textSize="25sp"
          android:padding="20dp" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/onboardEmployeeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:inputType="number"
        android:hint="@string/employeeId"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/onboardbuttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginStart="40dp"
            android:padding="20dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/butttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:padding="20dp"
            android:text="@string/search" />
    </LinearLayout>

</LinearLayout>