<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/signInEmpId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/employeeId"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgotPassword"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_marginStart="40dp"
            android:padding="20dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/butttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:padding="20dp"
            android:text="@string/signIn" />
    </LinearLayout>

</LinearLayout>